# baselibs/apiscall/swagger/model_files_upload_body.go
@@ -7,8 +7,15 @@
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
+import (
+	"os"
+)
 
-type ApisNodeInfo struct {
-	BagName string `json:"bagName,omitempty"`
-	MaxRunningTasks int32 `json:"maxRunningTasks,omitempty"`
+type FilesUploadBody struct {
+	// file name
+	FileName string `json:"fileName"`
+	// file block
+	Block string `json:"block"`
+	// this is a file
+	File **os.File `json:"file"`
 }
